--- a/css/template.css
+++ b/css/template.css
@@ -5,7 +5,7 @@ html{
   -webkit-text-size-adjust:
   100%;
   color:#222;
-  box-sizing: :border-box;
+  box-sizing: border-box;
 }
 *, *:before, *:after{box-sizing: inherit;}
 body{
