--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,34 @@
+html{
+  font-family: Arial, sans-serif;
+}
 header ul{
   list-style: none;
   padding-left: 0;
   margin: 0;
+  display: none;
+  position: absolute;
+  top:100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  left: 0;
+  right: 0;
+  padding-bottom: 20px;
+  border-bottom: 1px solid black;
 }
 
 header a{
-  text-decoration: underline;
+  text-decoration:none;
+  color: black;
 }
 
 header{
   display: flex;
   justify-content: space-between;
+  position: relative;
+  padding: 16px;
+  align-items:center;
+  border-bottom: 1px solid grey;
 }
 
 header nav ul{
@@ -20,23 +38,77 @@ h1{
   margin: 0 0 0 1rem;
 }
 
-h1, .fas{
+h1, .fas, .fab{
   font-size: 1.5rem;
   color:black;
 }
-.fab{
-  color:red;
-  border:none;
-  font-size: 1.5rem;
-  padding:0.1rem 0.5rem;
-  margin:0 1rem;
-  border-left:5px solid red;
-  border-right: 5px solid red;
-  box-shadow: 0 0 5px 0 grey;
-}
-header nav ul{
-  display: none;
-}
+
 header div {
   display: flex;
+    align-items:center;
+}
+
+h1 a{
+  color:red;
+  font-weight: 900;
+}
+
+nav ul li a{
+  font-weight: 900;
+  display: block;
+  margin:8px 0;
+}
+
+nav ul a:hover{
+  color:red;
+}
+.overlay{
+  background-color: rgba(50, 50, 50, 0.5);
+  position: absolute;
+  height: 100vh;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top:0;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  display: none;
+}
+.locations{
+  background-color: white;
+  max-width: 90%;
+  position: absolute;
+  left: 5%;
+  top:calc(50% - (303px / 2));
+}
+
+@media (min-width:768px) {
+  .menu-btn{
+    display: none;
+  }
+  h1{
+    margin-left: 0;
+  }
+  nav ul{
+    display: flex !important;
+    position: static;
+    flex-direction: row;
+    text-align: left;
+    border:none;
+    padding: 0;
+  }
+  nav {
+    display: flex;
+    align-items: center;
+  }
+  nav ul li a{margin: 0 10px 0 0;
+  font-weight: normal;}
+  .mobile{
+  display: none;
+  }
+  .locations{
+    max-width: 800px;
+    margin: 0 auto;
+  }
 }
