--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,8 @@ header div {
 }
 
 h1 a{
-  color:red;
-  font-weight: 900;
+  color:#a91122;
+  font-weight:900;
 }
 
 nav ul li a{
@@ -81,6 +81,16 @@ nav ul a:hover{
   position: absolute;
   left: 5%;
   top:calc(50% - (303px / 2));
+}
+
+main > div {
+  text-align: center;
+  padding:5%;
+  color:white;
+}
+.background-banner{
+  background-image: url('../img/five-guys-hero.jpg');
+  background-size: 100%;
 }
 
 @media (min-width:768px) {
